--- a/css/style.css
+++ b/css/style.css
@@ -817,7 +817,7 @@
 
 .whatsapp-float {
   position: fixed;
-  bottom: calc(3.2rem + env(safe-area-inset-bottom, 0px));
+  bottom: 3.2rem;
   right: 3.2rem;
   width: 5.6rem;
   height: 5.6rem;
